force-app/main/default/objects/Interview__c/fields/Applications__c.field-meta.xml
<CustomField>
    <fullName>Applications__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applications</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>