force-app/main/default/objects/Interview__c/fields/Interview_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Interview_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Applicant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>