force-app/main/default/objects/Interview__c/fields/Interview_Location__c.field-meta.xml
<CustomField>
    <fullName>Interview_Location__c</fullName>
    <label>Interview Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>