force-app/main/default/objects/Interview__c/fields/Interviewee__c.field-meta.xml
<CustomField>
    <fullName>Interviewee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>