force-app/main/default/objects/Interview__c/fields/Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Vacancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vacancy</label>
    <referenceTo>Vacancy__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>